# AI2048

./: .gitignore  Config.py  Fast2048.py  Game2048Env.py  Model.py  QNetwork.py  Trainer.py  Visualizer.py  main.py  requirements.txt  test.py  todo  train.py  trainConvDQN.py  trainPPO.py  tune.py  utility.py  visualizer.py
architecture/: ConvDQN.py  DQN.py
game/: Game2048Env.py
hyperparameters/: optuna_output_1.txt
models/150k_ConvDQN_model/: model.pth  target_model.pth
models/1M_episode_model/: model.pth  target_model.pth
models/model_2/: model.pth  target_model.pth
models/model_3/: model.pth  target_model.pth
models/model_6/: model.pth  target_model.pth
models/model_7/: model.pth  target_model.pth
models/model_8/: model.pth  target_model.pth
models/model_9/: model.pth  target_model.pth
refactor/: Fast2048.py  PPO.py
src/: Config.py  ExpectimaxSearcher.py  Fast2048.py  Game2048Env.py  PPO.py  Visualizer.py  fast2048_cpp.cp313-win_amd64.pyd  todo  utility.py
src_cpp/: CMakeLists.txt  ExpectimaxSearcher.cpp  ExpectimaxSearcher.h  Fast2048.cpp  Fast2048.h  RandomUtil.cpp  RandomUtil.h  bindings.cpp  main.cpp
utility/: ConvDQNTrainer.py
